Bugfix: Wrong letter-spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -37,9 +37,11 @@
   font-size: 16px;
   line-height: 22px !important;
   font-weight: bold;
+  letter-spacing: normal;
 }
 
 .normal-text {
   font-size: 13px;
   line-height: 18px !important;
+  letter-spacing: normal;
 }
